# cargo-changelog

./: .gitignore  .gitlint  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  changelog.toml  deny.toml  flake.nix
.changelogs/: template.md
.changelogs/0.1.0/: 2022-09-18T10_40_28_565776238.md
.changelogs/unreleased/: 2023-03-02T07_41_23_894605341.md  2023-03-02T07_43_21_335297086.md  2023-03-03T08_08_41_21078057.md  2023-04-28T20_41_56_101798423.md  2023-04-28T21_20_28_722974326.md  2023-04-29T10_41_03_511451575.md  2023-04-29T15_18_11_131678077.md  2023-04-29T15_19_10_88832722.md  2023-06-18T13_57_52_335292453.md  2023-09-20T08_54_35_168068392.md  2025-03-29T11_05_47_971055381.md  2025-03-29T11_07_12_614021475.md  2025-06-14T10_19_56_834565411.md  2025-06-14T10_27_48_458424981.md  2025-07-17T09_33_48_715921239.md
.github/: dependabot.yml
.github/workflows/: ci.yml  commit-lint.yml  flake-update.yml
assets/: default_config.toml  default_template.handlebars.md
src/: cli.rs  config.rs  consts.rs  error.rs  format.rs  fragment.rs  main.rs  selector.rs  util.rs
src/command/: add_command.rs  common.rs  create_release_command.rs  generate_changelog_command.rs  generate_command.rs  has.rs  mod.rs  new_command.rs  release_command.rs  show.rs  verify_metadata_command.rs
src/template/: common.rs  group_by_helper.rs  indent_helper.rs  mod.rs  reverse_helper.rs  reverse_versions_list_helper.rs  sort_versions_helper.rs
tests/: add_command.rs  add_command_creates_default_header.rs  add_command_editor.rs  changelog_template.rs  common.rs  configuration.rs  create_release.rs  generate-changelog.rs  generate_command.rs  indent_helper.rs  init_command.rs  new_command.rs  new_command_creates_default_header.rs  new_command_editor.rs  no_config_error.rs  no_repo_error.rs  release_command.rs  verify_metadata_command.rs
