[package]
name = "cargo-changelog"
version = "0.2.0"
edition = "2021"

authors = [ "Matthias Beyer <mail@beyermatthias.de>" ]
description = "Changelog management tool"
homepage = "https://github.com/matthiasbeyer/cargo-changelog"
repository = "https://github.com/matthiasbeyer/cargo-changelog"
license = "GPL-2.0"
readme = "./README.md"
keywords = [ "cargo", "changelog", "cli", "utility", "tool" ]
categories = [ "command-line-utilities", "development-tools", "development-tools::cargo-plugins" ]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
cargo_metadata = "0.20.0"
clap = { version = "4", features = [ "cargo", "derive", "wrap_help" ] }
clap-verbosity-flag = { version = "3.0.2", default-features = false, features = ["tracing"] }
clap_complete = "4.5.48"
comma = "1.0.0"
dialoguer = "0.11.0"
env_logger = "0.11.8"
getset = "0.1.2"
git2 = "0.20.1"
handlebars = "6"
is-terminal = "0.4.15"
itertools = "0.14"
miette = { version = "7.5.0", features = ["fancy"] }
semver = "1.0.23"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
thiserror = "2.0.9"
time = { version = "0.3.20", features = [ "formatting", "macros" ] }
toml = "0.8.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
typed-builder = "0.21.0"
walkdir = "2.5.0"
yansi = "1"

[dev-dependencies]
assert_cmd = "2.0.17"
indoc = "2.0.0"
predicates = "3.1.2"
tempfile = "3.20.0"
